<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <ImageView
            android:id="@+id/splash_profile_logo"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_centerVertical="true"
            android:tint="@color/colorPrimary"
            android:transitionName="@string/logoTransition"
            app:srcCompat="@drawable/ic_launcher_background" />

        <TextView
            android:id="@+id/splash_profile_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@+id/splash_profile_logo"
            android:layout_toRightOf="@+id/splash_profile_logo"
            android:text="@string/app_name"
            android:textSize="20dp"
            android:transitionName="@string/nameTransition" />
    </RelativeLayout>
</RelativeLayout>
